--- a/products.html
+++ b/products.html
@@ -157,7 +157,7 @@
 <div class="row">
 		<div class="col-4">
 			<a href="product tv.html">
-			<img src="images/TV.png"></a>
+			<img src="images/tv.png"></a>
 			<h4>Android TV</h4>
 			<div class="rating">
 			<i class="fa fa-star"></i>
