--- a/products.html
+++ b/products.html
@@ -170,7 +170,7 @@
 		</div>
 				<div class="col-4">
 			<a href="product watch.html">
-			<img src="images/Watch.png" class="col-4-1"></a>
+			<img src="images/watch.png" class="col-4-1"></a>
 			<h4>Watch</h4>
 			<div class="rating">
 			<i class="fa fa-star"></i>
